# adwatch

./: .gitignore  APK_HUNTING_CONSUMED.md  README.md  SECURITY.md  pyproject.toml
docs/: linkedin-draft.md  stitch-prompt.md
docs/protocols/: 5aea-name-beacon.md  70mai-dashcam.md  acaia-scale.md  airoha-audio.md  airthings.md  alivecor-ekg.md  altbeacon.md  amazon-echo.md  amazon-fire-tv.md  amazon-hid-remote.md  amazon-ring.md  amazon-sidewalk.md  amphiro.md  anker-soundcore.md  apple-airdrop.md  apple-airplay.md  apple-continuity-gaps.md  apple-continuity.md  apple-fcb2.md  apple-findmy.md  apple-nearby-action.md  apple-proximity-pairing.md  apple-setup-handoff.md  aranet4.md  aruba-asset-tag.md  assa-abloy-aperio.md  astera-art7wifi.md  asterabox.md  atc-pvvx.md  august-yale.md  autophix-obd2.md  b-parasite.md  bbpos.md  berner-air-curtain.md  beta-bionics-ilet.md  blackvue-dashcam.md  ble-thermal-printer.md  bluemaestro.md  bm2-battery.md  bose-febe.md  (+277 more)
src/adwatch/: _bt_company_ids.py  _oui_vendors.py  classifier.py  codegen.py  config.py  main.py  models.py  pipeline.py  registry.py  scanner.py  utils.py  vendors.py
tests/: conftest.py  test_acaia_scale.py  test_airthings.py  test_alibaba_ais.py  test_alivecor_ekg.py  test_allegion_engage.py  test_amazon_echo.py  test_amazon_fire_tv.py  test_amphiro.py  test_anki_vector.py  test_apple_continuity_fix.py  test_apple_continuity_fixes.py  test_apple_fcb2.py  test_assa_abloy_origo.py  test_audio_technica.py  test_august_yale.py  test_autophix_obd2.py  test_b_parasite.py  test_batch2_plugins.py  test_batch3_plugins.py  test_batch4_plugins.py  test_batch5_plugins.py  test_beurer.py  test_bm2_battery.py  test_bmw_bury_findmate.py  test_bose.py  test_bp5s.py  test_breville.py  test_candyhouse_sesame.py  test_chamberlain_myq.py  test_chipolo.py  test_classifier.py  test_codegen.py  test_combustion.py  test_current_lighting.py  test_danalock.py  test_dashboard.py  test_database_pragmas.py  test_dewalt.py  test_dreame.py  (+135 more)
tests/parsers/: test_apple_airdrop.py  (+8 more)
(+340 files in other folders)
