[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adwatch"
version = "0.1.0"
description = "BLE Advertisement Analyzer"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ben Smith"}]
keywords = ["bluetooth", "ble", "advertisement", "scanner", "analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
]

[project.scripts]
adwatch = "adwatch.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/bensmith83/adwatch"
Repository = "https://github.com/bensmith83/adwatch"
Issues = "https://github.com/bensmith83/adwatch/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
